# infochannel_webserver

./: .gitmodules  Cargo.toml  Rocket.toml
assets/: 123456  235321  654321  998876  news.sqlite
assets/datecontrol/: 001122
assets/public_ip/: 2022-02
assets/size_state/: free_space
assets/wireguard/: clients  list
src/SQL_Statements/: add_newsfeed.sql  del_newsfeed_by_timestamp.sql  get_all_newsfeeds.sql
src/lib/: constants.rs  mod.rs  web_api.rs
